# advent-of-code-2022

./: .gitignore  CMakeLists.txt  README.md  compiler_flags.txt
apps/: CMakeLists.txt  day_1.cpp  day_1.hpp  day_2.cpp  day_2.hpp  day_3.cpp  day_3.hpp  day_4.cpp  day_4.hpp  day_5.cpp  day_5.hpp  day_6.cpp  day_6.hpp  day_7.cpp  day_7.hpp  day_8.cpp  day_8.hpp  day_9.cpp  day_9.hpp  test.cpp
include/advent/: lib.hpp
src/: CMakeLists.txt  lib.cpp
